--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,19 @@
 			<artifactId>spring-boot-starter-integration</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
+			<version>5.2.1</version>
+		</dependency>
+
+		<!-- JSON Library para processamento de respostas -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20230618</version>
+		</dependency>
+
 		<!-- OpenAI API Client -->
 		<dependency>
 			<groupId>com.theokanning.openai-gpt3-java</groupId>
@@ -67,6 +80,34 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.12.0</version>
+		</dependency>
+
+		<!-- Apache HTTP Client 5 com dependências completas -->
+		<dependency>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
+			<version>5.2.1</version>
+		</dependency>
+
+		<!-- Apache HTTP Client 5 Core -->
+		<dependency>
+			<groupId>org.apache.httpcomponents.core5</groupId>
+			<artifactId>httpcore5</artifactId>
+			<version>5.2.1</version>
+		</dependency>
+
+		<!-- Apache HTTP Client 5 SSL Support -->
+		<dependency>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5-fluent</artifactId>
+			<version>5.2.1</version>
+		</dependency>
+
+		<!-- JSON Library para processamento de respostas -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20230618</version>
 		</dependency>
 
 		<!-- JUnit e testes -->
