--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,12 +32,12 @@ logging:
     max-size: 10MB
     max-history: 7
 
-# Configuração do Spring Boot Actuator
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health,info,metrics
-  endpoint:
-    health:
-      show-details: when_authorized
+## Configuração do Spring Boot Actuator
+#management:
+#  endpoints:
+#    web:
+#      exposure:
+#        include: health,info,metrics
+#  endpoint:
+#    health:
+#      show-details: when_authorized
