--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,9 +10,9 @@ server:
 # Configuração do OpenAI
 openai:
   api:
-    key: ${OPENAI_API_KEY}
-  model: gpt-4
- # model: gpt-3.5-turbo
+    key: OPENAI_API_KEY
+  #model: gpt-4
+  model: gpt-3.5-turbo
 
 # Diretório para armazenamento de arquivos gerados
 file:
@@ -32,12 +32,12 @@ logging:
     max-size: 10MB
     max-history: 7
 
-## Configuração do Spring Boot Actuator
-#management:
-#  endpoints:
-#    web:
-#      exposure:
-#        include: health,info,metrics
-#  endpoint:
-#    health:
-#      show-details: when_authorized
+# Configuração do Spring Boot Actuator
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics
+  endpoint:
+    health:
+      show-details: when_authorized
