--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,17 @@
 			<artifactId>spring-messaging</artifactId>
 		</dependency>
 
+		<!-- Spring Data MongoDB -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
+
+		<!-- MongoDB Java driver -->
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongodb-driver-sync</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.webjars</groupId>
