--- a/pom.xml
+++ b/pom.xml
@@ -123,16 +123,11 @@
 			<version>2.3.4</version>
 		</dependency>
 
-		<!-- MongoDB -->
+		<!-- Swagger/OpenAPI -->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb</artifactId>
-		</dependency>
-    
-		<!-- Para GridFS (armazenamento de arquivos grandes) -->
-		<dependency>
-			<groupId>org.mongodb</groupId>
-			<artifactId>mongodb-driver-sync</artifactId>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.3.0</version>
 		</dependency>
 	</dependencies>
 
